tests/machine/x/erlang/group_by_sort.error
exit status 127
tests/machine/x/erlang_new/group_by_sort.erl:6:333: syntax error before: '}'
escript: There were compilation errors.
